[workspace]
members = [
    "pinnacle-api-defs",
    "api/rust",
    "wlcs_pinnacle",
    "api/lua/build",
    # snowcap
    "snowcap",
    "snowcap/api/rust",
    "snowcap/snowcap-api-defs",
]
exclude = [
    "lcat", # The docs building repo is currently cloned into this repo in CI
]

[workspace.package]
authors = ["Ottatop <ottatop1227@gmail.com>"]
edition = "2021"
repository = "https://github.com/pinnacle-comp/pinnacle/"

[workspace.dependencies]
# Tokio
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"]}
tokio-stream = { version = "0.1.17", features = ["net"] }
# gRPC
prost = "0.13.4"
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-build = "0.12.3"
# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
# API definitions
pinnacle-api-defs = { path = "./pinnacle-api-defs" }
# Misc.
xkbcommon = "0.8.0"
xdg = "2.5.2"
bitflags = "2.8.0"
clap = { version = "4.5.28", features = ["derive"] }
dircpy = "0.3.19"
tempfile = "3.16.0"
indexmap = "2.7.1"
anyhow = { version = "1.0.95", features = ["backtrace"] }
snowcap-api-defs = { path = "./snowcap/snowcap-api-defs" }
hyper-util = { version = "0.1.10", features = ["tokio"] }
futures = "0.3.31"
thiserror = "2.0.11"
walkdir = "2.5.0"
tower = { version = "0.5.2", features = ["util"] }
passfd = "0.1.6"
tracy-client = { version = "0.18.0", default-features = false }

[workspace.dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "f93476c"
# path = "../../git/smithay"
default-features = false
features = [
    "desktop",
    "wayland_frontend",
    # udev
    "backend_libinput",
    "backend_udev",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_session_libseat",
    "renderer_gl",
    "renderer_multi",
    # egl
    "use_system_lib",
    "backend_egl",
    # winit
    "backend_winit",
    "backend_drm",
    # xwayland
    "xwayland",
    "x11rb_event_source",
]

[workspace.lints.clippy]
too_many_arguments = "allow"
new_without_default = "allow"
type_complexity = "allow"
let_and_return = "allow"
dbg_macro = "warn"

########################################################################yo😎###########

[package]
name = "pinnacle"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
description = "A WIP Smithay-based Wayland compositor"
readme = "README.md"
repository.workspace = true
keywords = ["wayland", "compositor", "smithay", "lua"]

[dependencies]
# Smithay
smithay = { workspace = true }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay", rev = "f93476c" }
# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2.3"
# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }
# xcursor stuff
xcursor = { version = "0.3.8" }
# gRPC
prost = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
# Tokio
tokio = { workspace = true, features = ["process", "io-util", "signal"] }
tokio-stream = { workspace = true }
# CLI
clap = { workspace = true }
cliclack = "0.3.5"
# Misc.
bitflags = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
shellexpand = { version = "3.1.0", features = ["path"] }
x11rb = { version = "0.13.1", default-features = false, features = ["composite"] }
xkbcommon = { workspace = true }
xdg = { workspace = true }
sysinfo = "0.33.1"
pinnacle-api-defs = { workspace = true }
dircpy = { workspace = true }
chrono = "0.4.39"
bytemuck = "1.21.0"
pinnacle-api = { path = "./api/rust", default-features = false }
gag = "1.0.0"
drm-sys = "0.8.0"
libdisplay-info = "0.2.2"
indexmap = { workspace = true }
snowcap = { path = "./snowcap", optional = true }
snowcap-api = { path = "./snowcap/api/rust", optional = true }
assert_matches = "1.5.0"
taffy = "0.7.5"
slab_tree = "0.3.2"
bimap = "0.6.3"
itertools = "0.14.0"
passfd = { workspace = true }
profiling = "1.0.16" # Only used to enable profiling within smithay
tracy-client = { workspace = true }

[build-dependencies]
vergen-gitcl = { version = "1.0.5", features = ["rustc", "cargo", "si"] }

[dev-dependencies]
temp-env = "0.3.6"
tempfile = { workspace = true }
test-log = { version = "0.2.17", default-features = false, features = ["trace"] }
pinnacle = { path = ".", features = ["wlcs"], default-features = false }
pinnacle-api = { path = "./api/rust", default-features = false }

[features]
default = ["snowcap"]
snowcap = ["pinnacle-api/snowcap", "dep:snowcap", "dep:snowcap-api"]
testing = ["smithay/renderer_test"]
wlcs = ["testing"]
tracy = ["profiling/profile-with-tracy", "tracy-client/default"]
tracy-ondemand = ["tracy", "tracy-client/ondemand", "tracy-client/manual-lifetime"]
tracy-alloc = ["tracy"]

[profile.release]
debug = "line-tables-only"
lto = "thin"

[lints]
workspace = true
