[workspace]
members = [
    "pinnacle-api-defs",
    "api/rust",
    "wlcs_pinnacle",
    "api/lua/build",
    # snowcap
    "snowcap",
    "snowcap/api/rust",
    "snowcap/snowcap-api-defs",
]
exclude = [
    "lcat", # The docs building repo is currently cloned into this repo in CI
]

[workspace.package]
authors = ["Ottatop <ottatop1227@gmail.com>"]
edition = "2021"
repository = "https://github.com/pinnacle-comp/pinnacle/"
rust-version = "1.82"

[workspace.dependencies]
# Tokio
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"]}
tokio-stream = { version = "0.1.17", features = ["net"] }
# gRPC
prost = "0.13.5"
tonic = "0.13.1"
tonic-reflection = "0.13.1"
tonic-build = "0.13.0"
# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
# API definitions
pinnacle-api-defs = { path = "./pinnacle-api-defs" }
# Misc.
xkbcommon = "0.8.0"
xdg = "3.0.0"
bitflags = "2.9.1"
clap = { version = "4.5.40", features = ["derive", "string"] }
tempfile = "3.20.0"
indexmap = "2.9.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
snowcap-api-defs = { path = "./snowcap/snowcap-api-defs" }
hyper-util = { version = "0.1.14", features = ["tokio"] }
futures = "0.3.31"
thiserror = "2.0.12"
walkdir = "2.5.0"
tower = { version = "0.5.2", features = ["util"] }
passfd = "0.1.6"
tracy-client = { version = "0.18.1", default-features = false }

[workspace.dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "52107d3"
# path = "../../git/smithay"
default-features = false
features = [
    "desktop",
    "wayland_frontend",
    # udev
    "backend_libinput",
    "backend_udev",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_session_libseat",
    "renderer_gl",
    "renderer_multi",
    # egl
    "use_system_lib",
    "backend_egl",
    # winit
    "backend_winit",
    "backend_drm",
    # xwayland
    "xwayland",
    "x11rb_event_source",
]

[workspace.lints.clippy]
too_many_arguments = "allow"
new_without_default = "allow"
type_complexity = "allow"
let_and_return = "allow"
dbg_macro = "warn"
result_large_err = "allow"
large_enum_variant = "allow"

########################################################################yo😎###########

[package]
name = "pinnacle"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
description = "A Wayland compositor inspired by AwesomeWM"
repository.workspace = true
keywords = ["wayland", "compositor", "smithay", "lua"]
rust-version.workspace = true

[dependencies]
# Smithay
smithay = { workspace = true }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay", rev = "52107d3" }
# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2.3"
# Errors
anyhow = { workspace = true }
# xcursor stuff
xcursor = { version = "0.3.8" }
# gRPC
tonic = { workspace = true }
tonic-reflection = { workspace = true }
# Tokio
tokio = { workspace = true, features = ["process", "io-util", "signal"] }
tokio-stream = { workspace = true }
# CLI
clap = { workspace = true }
clap_complete = "4.5.54"
cliclack = "0.3.6"
# Misc.
bitflags = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
shellexpand = { version = "3.1.1", features = ["path"] }
xkbcommon = { workspace = true }
xdg = { workspace = true }
sysinfo = "0.34.2"
pinnacle-api-defs = { workspace = true }
bytemuck = "1.23.1"
pinnacle-api = { path = "./api/rust", default-features = false }
gag = "1.0.0"
drm-sys = "0.8.0"
libdisplay-info = "0.2.2"
indexmap = { workspace = true }
snowcap = { path = "./snowcap", optional = true }
snowcap-api = { path = "./snowcap/api/rust", optional = true }
assert_matches = "1.5.0"
taffy = "=0.8.2" # Patched below for rounding fixes
# impl traits for NodeRef
slab_tree = { git = "https://github.com/Ottatop/slab-tree", rev = "d6adbbb" }
bimap = "0.6.3"
itertools = "0.14.0"
passfd = { workspace = true }
profiling = { version = "1.0.16", optional = true } # Only used to enable profiling within smithay
tracy-client = { workspace = true }
sd-notify = "0.4.5"

[build-dependencies]
vergen-gitcl = { version = "1.0.5", features = ["rustc", "cargo", "si"] }

[dev-dependencies]
temp-env = "0.3.6"
tempfile = { workspace = true }
test-log = { version = "0.2.17", default-features = false, features = ["trace"] }
pinnacle = { path = ".", features = ["wlcs"], default-features = false }
pinnacle-api = { path = "./api/rust", default-features = false }
mlua = { version = "0.10.5", features = ["lua54", "send", "macros"] }
proptest = "1.7.0"
proptest-derive = "0.6.0"
rand = "0.9.1"
wayland-client = "0.31.10"
calloop-wayland-source = "0.4.0"

[features]
default = ["snowcap"]
snowcap = ["pinnacle-api/snowcap", "dep:snowcap", "dep:snowcap-api"]
testing = ["smithay/renderer_test"]
wlcs = ["testing"]
tracy = ["profiling/profile-with-tracy", "tracy-client/default"]
tracy-ondemand = ["tracy", "tracy-client/ondemand", "tracy-client/manual-lifetime"]
tracy-alloc = ["tracy"]

[profile.release]
debug = "line-tables-only"
lto = "thin"

[lints]
workspace = true

[patch.crates-io]
taffy = { git = "https://github.com/Ottatop/taffy", rev = "dcdaa42" } # Rounding fixes
