[workspace]
members = [
    "pinnacle-api-defs",
    "api/rust",
    "wlcs_pinnacle",
    "api/lua/build",
    # snowcap
    "snowcap",
    "snowcap/snowcap-protocols",
    "snowcap/api/rust",
    "snowcap/snowcap-api-defs",
]
exclude = [
    "lcat", # The docs building repo is currently cloned into this repo in CI
]

[workspace.package]
version = "0.2.2"
authors = ["Ottatop <ottatop1227@gmail.com>"]
edition = "2024"
repository = "https://github.com/pinnacle-comp/pinnacle/"
rust-version = "1.88"

[workspace.dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
bitflags = "2.10.0"
clap = { version = "4.5.54", features = ["derive", "string"] }
futures = "0.3.31"
hyper-util = { version = "0.1.19", features = ["tokio"] }
indexmap = "2.13.0"
passfd = "0.1.6"
pinnacle-api-defs = { path = "./pinnacle-api-defs" }
prost = "0.13.5"
snowcap-api-defs = { path = "./snowcap/snowcap-api-defs" }
snowcap-protocols = { path = "./snowcap/snowcap-protocols" }
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = "0.13.1"
tonic-build = "0.13.1"
tonic-reflection = "0.13.1"
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "registry",
] }
tracy-client = { version = "0.18.4", default-features = false }
walkdir = "2.5.0"
wayland-backend = "0.3.12"
wayland-scanner = "0.31.8"
xdg = "3.0.0"
xkbcommon = "0.9.0"

[workspace.dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "2928e4f"
# path = "../../git/smithay"
default-features = false
features = [
    "desktop",
    "wayland_frontend",
    # udev
    "backend_libinput",
    "backend_udev",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_session_libseat",
    "renderer_gl",
    "renderer_multi",
    # egl
    "backend_egl",
    # winit
    "backend_winit",
    "backend_drm",
    # xwayland
    "xwayland",
    "x11rb_event_source",
]

[workspace.lints.clippy]
dbg_macro = "warn"
large_enum_variant = "allow"
let_and_return = "allow"
new_without_default = "allow"
result_large_err = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

########################################################################yo😎###########

[package]
name = "pinnacle"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
description = "A Wayland compositor inspired by AwesomeWM"
repository.workspace = true
keywords = ["wayland", "compositor", "smithay", "lua"]
rust-version.workspace = true

[dependencies]
smithay = { workspace = true }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay", rev = "2928e4f" }

anyhow = { workspace = true }
assert_matches = "1.5.0"
async-channel = "2.5.0"
bimap = "0.6.3"
bitflags = { workspace = true }
bytemuck = "1.24.0"
clap = { workspace = true }
clap_complete = "4.5.65"
cliclack = "0.3.7"
drm-sys = "0.8.0"
gag = "1.0.0"
indexmap = { workspace = true }
itertools = "0.14.0"
libdisplay-info = "0.3.0"
passfd = { workspace = true }
pinnacle-api = { path = "./api/rust", default-features = false }
pinnacle-api-defs = { workspace = true }
profiling = { version = "1.0.17", optional = true } # Only used to enable profiling within smithay
sd-notify = "0.4.5"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = { version = "3.1.1", features = ["path"] }
slab_tree = { git = "https://github.com/Ottatop/slab-tree", rev = "d6adbbb" } # impl traits for NodeRef
snowcap = { path = "./snowcap", optional = true }
snowcap-api = { path = "./snowcap/api/rust", optional = true }
snowcap-protocols = { workspace = true }
sysinfo = "0.37.2"
taffy = "=0.8.2" # Patched below for rounding fixes
tokio = { workspace = true, features = ["process", "io-util", "signal"] }
tokio-stream = { workspace = true }
toml = "0.9.11"
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.4"
tracing-subscriber = { workspace = true }
tracy-client = { workspace = true }
wayland-backend = { workspace = true }
wayland-scanner = { workspace = true }
xcursor = { version = "0.3.10" }
xdg = { workspace = true }
xkbcommon = { workspace = true }

[build-dependencies]
vergen-gitcl = { version = "9.1.0", features = ["rustc", "cargo", "si"] }

[dev-dependencies]
temp-env = "0.3.6"
tempfile = { workspace = true }
test-log = { version = "0.2.19", default-features = false, features = [
    "trace",
] }
pinnacle = { path = ".", default-features = false }
pinnacle-api = { path = "./api/rust", default-features = false }
mlua = { version = "0.11.5", features = ["lua54", "send", "macros"] }
proptest = "1.9.0"
proptest-derive = "0.7.0"
rand = "0.9.2"
wayland-client = "0.31.12"
calloop-wayland-source = "0.4.1"

[features]
default = ["snowcap"]
snowcap = ["pinnacle-api/snowcap", "dep:snowcap", "dep:snowcap-api"]
testing = ["smithay/renderer_test"]
wlcs = ["testing"]
tracy = [
    "profiling/profile-with-tracy",
    "tracy-client/default",
    "snowcap?/tracy",
]
tracy-ondemand = [
    "tracy",
    "tracy-client/ondemand",
    "tracy-client/manual-lifetime",
    "snowcap?/tracy-ondemand",
]
tracy-alloc = ["tracy", "snowcap?/tracy-alloc"]

[profile.release]
debug = "line-tables-only"
lto = "thin"

# These are quite slow in debug mode
[profile.dev.package."tiny-skia"]
opt-level = 3

[profile.dev.package."cosmic-text"]
opt-level = 3

[lints]
workspace = true

[patch.crates-io]
taffy = { git = "https://github.com/Ottatop/taffy", rev = "dcdaa42" } # Rounding fixes
softbuffer = { git = "https://github.com/Ottatop/softbuffer", rev = "cd65c9e" }
