[package]
name = "pinnacle_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rkyv = { version = "0.7.42", features = ["validation", "strict"] }
num_enum = "0.6.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.96" }
rmp-serde = { version = "1.1.1" }
xkbcommon = { version = "0.5.0" }
