[package]
name = "wlcs_pinnacle"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
smithay = { workspace = true }
pinnacle = { path = "..", features = ["wlcs"], default-features = false }
pinnacle-api = { path = "../api/rust", default-features = false }
wayland-sys = { version = "0.31.6", features = ["client", "server"] }
wlcs = "0.1"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { workspace = true, features = ["net", "rt"] }

tempfile = { workspace = true }
