[package]
name = "wlcs_pinnacle"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pinnacle = { path = "..", features = ["wlcs"], default-features = false }
pinnacle-api = { path = "../api/rust", default-features = false }
smithay = { workspace = true }
wayland-sys = { version = "0.31.8", features = ["client", "server"] }
wlcs = "0.1"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { workspace = true, features = ["net", "rt"] }

tempfile = { workspace = true }
