[package]
name = "xtask"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
xdg = { workspace = true }
dircpy = { workspace = true }
