[package]
name = "pinnacle-api"
version = "0.0.2"
edition.workspace = true
authors.workspace = true
description = "The Rust implementation of the Pinnacle compositor's configuration API"
license = "MPL-2.0"
repository.workspace = true
keywords = ["compositor", "pinnacle", "api", "config"]
categories = ["api-bindings", "config"]

[dependencies]
pinnacle-api-defs = { workspace = true }
pinnacle-api-macros = { path = "./pinnacle-api-macros" }
tokio = { workspace = true, features = ["net", "process"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
futures = { workspace = true }
xkbcommon = { workspace = true }
bitflags = { workspace = true }
snowcap-api = { path = "../../snowcap/api/rust", optional = true }
indexmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num_enum = "0.7.3"

[features]
default = ["snowcap"]
snowcap = ["dep:snowcap-api"]
