[package]
name = "pinnacle-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Rust configuration library for Pinnacle"
license = "MPL-2.0"
repository.workspace = true
keywords = ["compositor", "pinnacle", "api", "config"]
categories = ["api-bindings", "config"]
rust-version.workspace = true

[dependencies]
bitflags = { workspace = true }
futures = { workspace = true }
hyper-util = { workspace = true }
indexmap = { workspace = true }
num_enum = "0.7.5"
passfd = { workspace = true }
pinnacle-api-defs = { workspace = true }
snowcap-api = { path = "../../snowcap/api/rust", optional = true }
tokio = { workspace = true, features = ["net", "process"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
xkbcommon = { workspace = true }

[features]
default = ["snowcap"]
snowcap = ["dep:snowcap-api"]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
result_large_err = "allow"
