[package]
name = "pinnacle-api-macros"
version = "0.0.2"
edition = "2021"
authors = ["Ottatop <ottatop1227@gmail.com>"]
description = "Macros for `pinnacle-api`"
license = "MPL-2.0"
repository = "https://github.com/pinnacle-comp/pinnacle"

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full", "parsing"] }
proc-macro2 = "1.0.76"

[lib]
proc-macro = true
