[package]
name = "pinnacle-api-macros"
version = "0.0.2"
edition.workspace = true
authors.workspace = true
description = "Macros for `pinnacle-api`"
license = "MPL-2.0"
repository.workspace = true

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.49", features = ["full", "parsing"] }
proc-macro2 = "1.0.78"

[lib]
proc-macro = true
