[package]
name = "pinnacle-api-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }
proc-macro2 = "1.0.76"

[lib]
proc-macro = true
