[package]
name = "snowcap-api"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
from_variants = "1.0.2"
futures = { workspace = true }
hyper-util = { workspace = true }
snowcap-api-defs = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
xdg = { workspace = true }
xkbcommon = { workspace = true }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
result_large_err = "allow"
